// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<comment> demo: > render [align] correctly 1`] = `
<div data-v-84e3fc0f="" class="sd-comment">
  <div class="sd-comment-avatar">
    <div data-v-84e3fc0f="" class="sd-avatar sd-avatar-circle"><span class="sd-avatar-text"><img data-v-84e3fc0f="" alt="avatar" src="https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp"></span>
      <!--v-if-->
    </div>
  </div>
  <div class="sd-comment-inner">
    <div class="sd-comment-inner-content">
      <div class="sd-comment-title sd-comment-title-align-right"><span class="sd-comment-author"><span>Balzac</span></span><span class="sd-comment-datetime"><span>1 hour</span></span></div>
      <div class="sd-comment-content">
        <div data-v-84e3fc0f=""> A design is a plan or specification for the construction of an object or system or for the implementation of an activity or process, or the result of that plan or specification in the form of a prototype, product or process. </div>
      </div>
      <div class="sd-comment-actions sd-comment-actions-align-right"><span data-v-84e3fc0f="" class="action"><span data-v-84e3fc0f=""><svg data-v-84e3fc0f="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-heart" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M38.083 12.912a9.93 9.93 0 0 1 .177 13.878l-.177.18L25.76 39.273c-.972.97-2.548.97-3.52 0L9.917 26.971l-.177-.181a9.93 9.93 0 0 1 .177-13.878c3.889-3.883 10.194-3.883 14.083 0 3.889-3.883 10.194-3.883 14.083 0Z"></path></svg></span> 83</span><span data-v-84e3fc0f="" class="action"><span data-v-84e3fc0f=""><svg data-v-84e3fc0f="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-star" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M22.552 6.908a.5.5 0 0 1 .896 0l5.02 10.17a.5.5 0 0 0 .376.274l11.224 1.631a.5.5 0 0 1 .277.853l-8.122 7.916a.5.5 0 0 0-.143.443l1.917 11.178a.5.5 0 0 1-.726.527l-10.038-5.278a.5.5 0 0 0-.466 0L12.73 39.9a.5.5 0 0 1-.726-.527l1.918-11.178a.5.5 0 0 0-.144-.443l-8.122-7.916a.5.5 0 0 1 .278-.853l11.223-1.63a.5.5 0 0 0 .376-.274z"></path></svg></span> 3</span><span data-v-84e3fc0f="" class="action"><svg data-v-84e3fc0f="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-message" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24z"></path></svg> Reply </span></div>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`<comment> demo: > render [basic] correctly 1`] = `
<div data-v-56d93930="" class="sd-comment">
  <div class="sd-comment-avatar">
    <div data-v-56d93930="" class="sd-avatar sd-avatar-circle"><span class="sd-avatar-text"><img data-v-56d93930="" alt="avatar" src="https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp"></span>
      <!--v-if-->
    </div>
  </div>
  <div class="sd-comment-inner">
    <div class="sd-comment-inner-content">
      <div class="sd-comment-title sd-comment-title-align-left"><span class="sd-comment-author"><span>Socrates</span></span><span class="sd-comment-datetime"><span>1 hour</span></span></div>
      <div class="sd-comment-content"><span>Comment body content.</span></div>
      <div class="sd-comment-actions sd-comment-actions-align-left"><span data-v-56d93930="" class="action"><span data-v-56d93930=""><svg data-v-56d93930="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-heart" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M38.083 12.912a9.93 9.93 0 0 1 .177 13.878l-.177.18L25.76 39.273c-.972.97-2.548.97-3.52 0L9.917 26.971l-.177-.181a9.93 9.93 0 0 1 .177-13.878c3.889-3.883 10.194-3.883 14.083 0 3.889-3.883 10.194-3.883 14.083 0Z"></path></svg></span> 83</span><span data-v-56d93930="" class="action"><span data-v-56d93930=""><svg data-v-56d93930="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-star" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M22.552 6.908a.5.5 0 0 1 .896 0l5.02 10.17a.5.5 0 0 0 .376.274l11.224 1.631a.5.5 0 0 1 .277.853l-8.122 7.916a.5.5 0 0 0-.143.443l1.917 11.178a.5.5 0 0 1-.726.527l-10.038-5.278a.5.5 0 0 0-.466 0L12.73 39.9a.5.5 0 0 1-.726-.527l1.918-11.178a.5.5 0 0 0-.144-.443l-8.122-7.916a.5.5 0 0 1 .278-.853l11.223-1.63a.5.5 0 0 0 .376-.274z"></path></svg></span> 3</span><span data-v-56d93930="" class="action"><svg data-v-56d93930="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-message" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24z"></path></svg> Reply </span></div>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`<comment> demo: > render [editor] correctly 1`] = `
<div data-v-8d30bcfc="" class="sd-comment">
  <div class="sd-comment-avatar"><img src="https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp" alt="comment-avatar"></div>
  <div class="sd-comment-inner">
    <div class="sd-comment-inner-content">
      <div class="sd-comment-title sd-comment-title-align-right"><span class="sd-comment-author"><span>Balzac</span></span><span class="sd-comment-datetime"><span>1 hour</span></span></div>
      <div class="sd-comment-content"><span>A design is a plan or specification for the construction of an object
          or system or for the implementation of an activity or process, or the
          result of that plan or specification in the form of a prototype,
          product or process.</span></div>
      <div class="sd-comment-actions sd-comment-actions-align-right"><span data-v-8d30bcfc="" class="action"><svg data-v-8d30bcfc="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-message" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24z"></path></svg> Reply </span></div>
    </div>
    <div class="sd-comment-inner-comment">
      <div data-v-8d30bcfc="" class="sd-comment">
        <div class="sd-comment-avatar"><img src="https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp" alt="comment-avatar"></div>
        <div class="sd-comment-inner">
          <div class="sd-comment-inner-content">
            <!--v-if-->
            <div class="sd-comment-content"><span data-v-8d30bcfc="" class="sd-input-wrapper"><!----><input class="sd-input sd-input-size-medium" type="text" placeholder="Here is you content." value=""><!----><!----></span></div>
            <div class="sd-comment-actions sd-comment-actions-align-right"><button data-v-8d30bcfc="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
                <!--v-if--> Cancel
              </button><button data-v-8d30bcfc="" class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
                <!--v-if--> Reply
              </button></div>
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<comment> demo: > render [nest] correctly 1`] = `
<div data-v-e6e90be1="" class="sd-comment">
  <div class="sd-comment-avatar"><img src="https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp" alt="comment-avatar"></div>
  <div class="sd-comment-inner">
    <div class="sd-comment-inner-content">
      <div class="sd-comment-title sd-comment-title-align-left"><span class="sd-comment-author"><span>Socrates</span></span><span class="sd-comment-datetime"><span>1 hour</span></span></div>
      <div class="sd-comment-content"><span>Comment body content.</span></div>
      <div class="sd-comment-actions sd-comment-actions-align-left"><span data-v-e6e90be1="" class="action"><svg data-v-e6e90be1="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-message" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24z"></path></svg> Reply </span></div>
    </div>
    <div class="sd-comment-inner-comment">
      <div data-v-e6e90be1="" class="sd-comment">
        <div class="sd-comment-avatar"><img src="https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/9eeb1800d9b78349b24682c3518ac4a3.png~tplv-uwbnlip3yd-webp.webp" alt="comment-avatar"></div>
        <div class="sd-comment-inner">
          <div class="sd-comment-inner-content">
            <div class="sd-comment-title sd-comment-title-align-left"><span class="sd-comment-author"><span>Balzac</span></span><span class="sd-comment-datetime"><span>1 hour</span></span></div>
            <div class="sd-comment-content"><span>Comment body content.</span></div>
            <div class="sd-comment-actions sd-comment-actions-align-left"><span data-v-e6e90be1="" class="action"><svg data-v-e6e90be1="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-message" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24z"></path></svg> Reply </span></div>
          </div>
          <div class="sd-comment-inner-comment">
            <div data-v-e6e90be1="" class="sd-comment">
              <div class="sd-comment-avatar"><img src="https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/8361eeb82904210b4f55fab888fe8416.png~tplv-uwbnlip3yd-webp.webp" alt="comment-avatar"></div>
              <div class="sd-comment-inner">
                <div class="sd-comment-inner-content">
                  <div class="sd-comment-title sd-comment-title-align-left"><span class="sd-comment-author"><span>Austen</span></span><span class="sd-comment-datetime"><span>1 hour</span></span></div>
                  <div class="sd-comment-content"><span>Reply content</span></div>
                  <div class="sd-comment-actions sd-comment-actions-align-left"><span data-v-e6e90be1="" class="action"><svg data-v-e6e90be1="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-message" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24z"></path></svg> Reply </span></div>
                </div>
                <!--v-if-->
              </div>
            </div>
            <div data-v-e6e90be1="" class="sd-comment">
              <div class="sd-comment-avatar"><img src="https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp" alt="comment-avatar"></div>
              <div class="sd-comment-inner">
                <div class="sd-comment-inner-content">
                  <div class="sd-comment-title sd-comment-title-align-left"><span class="sd-comment-author"><span>Plato</span></span><span class="sd-comment-datetime"><span>1 hour</span></span></div>
                  <div class="sd-comment-content"><span>Reply content</span></div>
                  <div class="sd-comment-actions sd-comment-actions-align-left"><span data-v-e6e90be1="" class="action"><svg data-v-e6e90be1="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-message" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24z"></path></svg> Reply </span></div>
                </div>
                <!--v-if-->
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
